# minecraft-challenge

./: CMakeLists.txt  LICENSE  README.md
include/: application.hpp  camera.hpp  context.hpp  entity.hpp  mesh.hpp  model.hpp
include/glad/: glad.h
include/maths/: glm.hpp  matrix.hpp
include/player/: player.hpp
include/renderer/: chunk_renderer.hpp  cube_renderer.hpp  quad_renderer.hpp  render_master.hpp
include/shaders/: basic_shader.hpp  chunk_shader.hpp  shader.hpp  shader_loader.hpp
include/states/: state_base.hpp  state_playing.hpp
include/texture/: basic_texture.hpp  texture_atlas.hpp
include/utils/: file_utils.hpp  non_copyable.hpp  non_movable.hpp  singleton.hpp
include/world/: world_constants.hpp
include/world/block/: block_data.hpp  block_database.hpp  block_id.hpp
include/world/block/types/: block_type.hpp
include/world/chunk/: chunk_mesh.hpp
res/textures/: .directory
shaders/: basic_fragment.glsl  basic_vertex.glsl  chunk_fragment.glsl  chunk_vertex.glsl
src/: application.cpp  camera.cpp  context.cpp  glad.c  main.cpp  model.cpp
src/maths/: matrix.cpp
src/player/: player.cpp
src/renderer/: chunk_renderer.cpp  cube_renderer.cpp  quad_renderer.cpp  render_master.cpp
src/shaders/: basic_shader.cpp  chunk_shader.cpp  shader.cpp  shader_loader.cpp
src/states/: state_playing.cpp
src/texture/: basic_texture.cpp  texture_atlas.cpp
src/utils/: file_utils.cpp
src/world/block/: block_data.cpp  block_database.cpp
src/world/block/chunk/: chunk_mesh.cpp
src/world/block/types/: block_type.cpp
